# factr_teleoperator

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: 99-ftdi-dynamixel.rules  setup_serial.sh
src/factr_teleop/: factr_teleop.py  factr_teleop_franka_mujoco.py  factr_teleop_franka_zmq.py  factr_teleop_grav_comp_demo.py
src/factr_teleop/configs/: franka_mujoco.yaml
test_hardware/: __init__.py  common.py  test_01_connection.py  test_02_read_positions.py  test_03_read_rate.py  test_04_zero_torque.py  test_05_individual_joints.py  test_06_calibration.py  test_07_live_monitor.py  test_08_gravity_comp.py  test_09_sysid.py
